# AI_FLOW

./: .gitignore  INTEGRATION.md  README.md  REQUEST_LIMITING_FIX.md
INSTRUCTIONS/: API_CONTRACT.md  BACKEND.md  DEPLOYMENT.md  FRONTEND.md  PROMPT_ENGINEERING.md  SETUP.md  plan.md
backend/: .env.example  ai_flow.py  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py  models.py
backend/app/api/: __init__.py  diagram_routes.py  diagram_routes_v1.py  document_routes.py
backend/app/llm/: __init__.py  azure_openai_provider.py  base.py
backend/app/prompts/: __init__.py  data_flow.py  process_flow.py  system_architecture.py  testing_strategy_prompt.py
backend/app/services/: __init__.py  diagram_service.py  document_service.py
backend/app/utils/: cache.py  json_parser.py  token_tracker.py
backend/app/writer/: __init__.py  agent.py
backend/app/writer/templates/: __init__.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  index.js
frontend/src/api/: client.js  diagramApi.js  documentApi.js
frontend/src/components/diagram/: DecisionTreeDiagram.jsx  InputForm.jsx  LoadingSpinner.jsx
frontend/src/components/export/: ExportButtons.jsx
frontend/src/utils/: exportDocx.js  exportImage.js  layoutEngine.js
